FIX: Some GUI elements didn't work because their slots were not declared correctly.

--- a/sofa/gui/SofaGuiMain/CMakeLists.txt
+++ b/sofa/gui/SofaGuiMain/CMakeLists.txt
@@ -16,7 +16,7 @@ add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES})
 set(SOFAGUIMAIN_DEPS ${SOFAGUI_TARGETS})
 list(REMOVE_ITEM SOFAGUIMAIN_DEPS SofaGuiMain)
 
-target_link_libraries( ${PROJECT_NAME} ${SOFAGUIMAIN_DEPS})
+target_link_libraries( ${PROJECT_NAME} PUBLIC ${SOFAGUIMAIN_DEPS})
 
 set( SOFAGUIMAIN_COMPILER_FLAGS "-DSOFA_BUILD_GUIMAIN" )
 
