--- a/sofa/gui/qt/CMakeLists.txt
+++ b/sofa/gui/qt/CMakeLists.txt
@@ -131,7 +131,7 @@ if(SOFA_HAVE_QWT)
 	list(APPEND SOURCE_FILES
 		 GraphDataWidget.cpp  
 		 )
-	list(APPEND SOFAGUIQT_LINK_LIBRARIES Qwt)
+	list(APPEND SOFAGUIQT_LINK_LIBRARIES qwt)
 endif()
 
 #if(SOFA-LIB_GUI_QTVIEWER)
