BUILD: ADD SOFA_INSTALL_HEADERS_GENERATED_ONLY which if TRUE disable copy of header files when installing

--- a/sofa/gui/SofaGuiCommon/CMakeLists.txt
+++ b/sofa/gui/SofaGuiCommon/CMakeLists.txt
@@ -53,6 +53,8 @@ install(TARGETS ${PROJECT_NAME}
 #        PUBLIC_HEADER DESTINATION "${SOFAGUI_INSTALL_INCLUDE_DIR}/sofa/gui" COMPONENT SofaGui_headers
         )
         
+if(NOT SOFA_INSTALL_HEADERS_GENERATED_ONLY)
 install(FILES ${HEADER_FILES} DESTINATION "${SOFAGUI_INSTALL_INCLUDE_DIR}/sofa/gui"
         COMPONENT SofaGui_headers
         )
+endif()
