--- a/sofa/gui/SofaGuiMain/CMakeLists.txt
+++ b/sofa/gui/SofaGuiMain/CMakeLists.txt
@@ -35,6 +35,8 @@ install(TARGETS ${PROJECT_NAME}
         ARCHIVE DESTINATION "${SOFAGUI_INSTALL_LIB_DIR}"
         )
 
+if(NOT SOFA_INSTALL_HEADERS_GENERATED_ONLY)
 install(FILES ${HEADER_FILES} DESTINATION "${SOFAGUI_INSTALL_INCLUDE_DIR}/sofa/gui"
         COMPONENT SofaGui_headers
         )
+endif()
