UPDATE: added support for unity build

--- a/sofa/gui/qt/CMakeLists.txt
+++ b/sofa/gui/qt/CMakeLists.txt
@@ -169,6 +169,25 @@ QT4_WRAP_UI(FORM_FILES ${UI_FILES})
 set(MOC_FILES_GROUP "Generated")
 set(FORM_FILES_GROUP "Generated")
 
+
+
+include( CMakeDependentOption )
+cmake_dependent_option(UNITY_BUILD_${PROJECT_NAME} "Decides if a the generated project files should build through a unity build instead of a normal build. A unity builds packs all .cpp files into a UnityBuild.cpp file and then only include this in the project. This greatly reduces build times." ON  SOFA_ALLOW_UNITY_BUILDS OFF)
+
+if( UNITY_BUILD_${PROJECT_NAME} )
+  # Generate a unity build, by creating the UnityBuild.cpp and only including the required 
+  # source files.
+  set( UNITYBUILD_INCLUDES "" )
+  foreach(filename ${SOURCE_FILES})
+    SET( UNITYBUILD_INCLUDES "${UNITYBUILD_INCLUDES}#include \"${filename}\"\n" )
+  endforeach(filename)
+
+  file(WRITE UnityBuild.cpp ${UNITYBUILD_INCLUDES} )
+
+  # overwrite the source files to only include the generated unity build file.
+  set( SOURCE_FILES UnityBuild.cpp )
+endif()
+
 add_library(${PROJECT_NAME} SHARED ${MOC_HEADER_FILES} ${HEADER_FILES} ${MOC_FILES} ${FORM_FILES} ${SOURCE_FILES})
 
 target_link_libraries( ${PROJECT_NAME} PUBLIC ${SOFAGUIQT_LINK_LIBRARIES})
