* [BUILD] FIX: do not use "../" to construct paths to parent directories, instead store their known path directly as variables
This is particularly important for paths added as include directories, as otherwise CMake is unable to remove duplicate entries (and there are dozens of projects that each added a different path module/Sofa.*/../ for example)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ set(SOLUTION_NAME "ISSofaGui")
 project(${SOLUTION_NAME})
 
 set( SofaGui_ACTUAL_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/sofa/gui )
+set(SOFAGUI_SOURCE_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
 ##
 ## SofaGui version
