REMOVE: GUIManager class and SofaGuiMain library UPDATE: all GUIs in SofaGUI now need to be loaded with the new simulation::gui::GUIFactory

--- a/sofa/gui/qt/CMakeLists.txt
+++ b/sofa/gui/qt/CMakeLists.txt
@@ -43,6 +43,7 @@ set(HEADER_FILES
 	PickHandlerCallBacks.h
 	QMenuFilesRecentlyOpened.h
 	ImageQt.h
+	initPlugin.h
 	QModelViewTableDataContainer.h
 	)
 
@@ -80,6 +81,7 @@ set(SOURCE_FILES
 	QSofaStatWidget.cpp
 	QMenuFilesRecentlyOpened.cpp
 	ImageQt.cpp 
+	initPlugin.cpp
 	)
 	
 set(UI_FILES
