--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,9 +20,9 @@ set(SOFAGUI_BUILD_INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR})
 set(SOFAGUI_BUILD_CMAKE_DIR   ${CMAKE_BINARY_DIR}/SofaGui)
 
 # Offer the user the choice of overriding the installation directories
-set(SOFAGUI_INSTALL_LIB_DIR     lib     					  CACHE PATH "Installation directory for libraries")
-set(SOFAGUI_INSTALL_BIN_DIR     bin     					  CACHE PATH "Installation directory for executables")
-set(SOFAGUI_INSTALL_INCLUDE_DIR include 					  CACHE PATH "Installation directory for header files")
+set(SOFAGUI_INSTALL_LIB_DIR     ${CMAKE_INSTALL_LIBDIR}     CACHE PATH "Installation directory for libraries")
+set(SOFAGUI_INSTALL_BIN_DIR     ${CMAKE_INSTALL_BINDIR}     CACHE PATH "Installation directory for executables")
+set(SOFAGUI_INSTALL_INCLUDE_DIR ${CMAKE_INSTALL_INCLUDEDIR} CACHE PATH "Installation directory for header files")
 set(SOFAGUI_INSTALL_CMAKE_DIR   ${SOFAGUI_INSTALL_LIB_DIR}/cmake/SofaGui)
 
 ## SofaGui dependencies
