--- a/sofa/gui/qt/CMakeLists.txt
+++ b/sofa/gui/qt/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 2.8)
 project(SofaGuiQt)
 
+if( POLICY CMP0020 )
+	cmake_policy( SET CMP0020 NEW )
+endif()
+
 set(MOC_HEADER_FILES
 
 	GenGraphForm.h
