[ISSofaGUI] REMOVE: disable MultithreadGUI (not used, linking issue on ubuntu 19.04)
(cherry picked from commit 5934c25555a108668ce7753607ea8a876c9fdbed)

--- a/sofa/gui/glut/CMakeLists.txt
+++ b/sofa/gui/glut/CMakeLists.txt
@@ -12,9 +12,9 @@ set(SOURCE_FILES
 	)
 
 if(SOFA_HAVE_BOOST)
-	list(APPEND HEADER_FILES MultithreadGUI.h)
-	
-	list(APPEND SOURCE_FILES MultithreadGUI.cpp)
+#	list(APPEND HEADER_FILES MultithreadGUI.h)
+#	
+#	list(APPEND SOURCE_FILES MultithreadGUI.cpp)
 endif()
 
 
