[ISSofaGUI] Add EnumFlagsDataWidget (//Ref// T9937)
This widget is responsible for displaying a grid of all possible flags
of an enum. It detects the content of the enum through the
AbstractTypeInfo API.

You can opt into using it by setting the widget of a BaseData to
"enum_flags".

(cherry picked from commit 12b397b517d8f68aa6f1a8bb114c94682ebfba31)

--- a/sofa/gui/qt/CMakeLists.txt
+++ b/sofa/gui/qt/CMakeLists.txt
@@ -14,6 +14,7 @@ set(MOC_HEADER_FILES
 	DataWidget.h
 	DataFilenameWidget.h
 	DisplayFlagsDataWidget.h
+    EnumFlagsDataWidget.h
 	MaterialDataWidget.h
 	ModifyObject.h
 	SimpleDataWidget.h
@@ -62,6 +63,7 @@ set(SOURCE_FILES
 	DataWidget.cpp 
 	DataFilenameWidget.cpp
 	DisplayFlagsDataWidget.cpp
+    EnumFlagsDataWidget.cpp
 	MaterialDataWidget.cpp
 	ModifyObject.cpp
 	SimpleDataWidget.cpp
